<resources>
    <string name="application_name">Hungama</string>
    <string name="activity_label_login">Login or Sign up</string>
    <string name="application_dialog_loading">Loading...</string>
    <string name="application_dialog_loading_content">Loading...</string>
    <string name="application_dialog_adding_to_favorites">Adding to Favorites...</string>
    <string name="application_dialog_removing_from_favorites">Removing from Favorites...</string>
    <string name="application_error_no_connectivity">No Internet connection. Please retry.</string>
    <string name="application_error_server_error">Unable to connect to the server. Please retry.</string>
    <string name="social_network_facebook">Facebook</string>
    <string name="social_network_twitter">Twitter</string>
    <string name="social_network_google">Gmail</string>
    <string name="social_network_none">None</string>
    <string name="application_collapse_sign">+</string>
    <string name="application_fold_sign">-</string>
    <string name="application_remove_sign">X</string>
    <string name="application_save">SAVE</string>
    <string name="general_share">share</string>
    <string name="general_capital_share">SHARE</string>
    <string name="general_lyrics">Lyrics</string>
    <string name="general_trivia">Trivia</string>
    <string name="empty_campaigns_list">No Promotions available at the moment. Thank you.</string>
    <string name="connection_error_empty_view_title">No Internet Connection.</string>
    <string name="connection_error_empty_view_button_retry">Retry</string>
    <string name="affiliate_id">891</string>
    <string name="oem_package_name">com.hungama.myplay.activity</string>
    <string name="login_header_title_line_one">Login &amp; Discover Music</string>
    <string name="login_header_title_line_two">you will</string>
    <string name="login_header_title_line_love">love</string>
    <string name="login_hungama_login">Hungama Login</string>
    <string name="login_hungama_sign_up">Hungama Sign Up</string>
    <string name="login_hungama_username_hint">Email id</string>
    <string name="login_hungama_password_hint">Password</string>
    <string name="login_hungama_login_login">LOGIN</string>
    <string name="login_hungama_login_forgot_your_password">Forgot password?</string>
    <string name="login_if_not_a_member_yet">Not a member?,</string>
    <string name="login_sign_up"> Sign Up</string>
    <string name="login_skip_for_now">Skip for now</string>
    <string name="login_forgot_password_text">"Enter the e-mail address associated with your account"</string>
    <string name="login_hint">Email id</string>
    <string name="login_forgot_password_submit">SUBMIT</string>
    <string name="login_signup_button_signup">SIGN UP</string>
    <string name="login_signup_already_a_member">If you are already a member, </string>
    <string name="login_signup_login">Login</string>
    <string name="login_signup_field_first_name">First Name*</string>
    <string name="login_signup_field_last_name">Last Name*</string>
    <string name="login_signup_field_email_address">Email Id*</string>
    <string name="login_signup_field_password">Password*</string>
    <string name="login_signup_field_mobile_number">Mobile No. (optional)</string>
    <string name="login_signup_field_coupon_number">Coupon No. (optional)</string>
    <string name="login_social_network_login_title_prefix">Login with </string>
    <string name="login_social_network_login_hint_email_id">Email id</string>
    <string name="login_social_network_login_hint_password">Password (optional)</string>
    <string name="login_social_network_login_reminder">If you already have a Hungama account, please enter password to sync your accounts.</string>
    <string name="login_social_network_login_button_continue">CONTINUE</string>
    <string name="login_signup_error_mandatory">is Mandatory Field</string>
    <string name="login_signup_error_email">Incorrect email format</string>
    <string name="login_signup_error_name">Name requires minimum 2 characters.</string>
    <string name="login_facebook_title">&lt;b>Connect&lt;/b> with &lt;b>Facebook&lt;/b></string>
    <string name="login_twitter_title">Connect with Twitter</string>
    <string name="login_google_title">Connect with Google</string>
    <string name="main_actionbar_navigation">Quick Links</string>
    <string name="main_actionbar_search">Search</string>
    <string name="main_actionbar_settings">Options</string>
    <string name="main_actionbar_title_music">Music</string>
    <string name="main_actionbar_title_videos">Videos</string>
    <string name="main_actionbar_title_discover">Discover</string>
    <string name="main_actionbar_title_radio">Radio</string>
    <string name="main_actionbar_title_specials">Specials</string>
    <string name="main_actionbar_navigation_music">MUSIC</string>
    <string name="main_actionbar_navigation_discover">DISCOVER</string>
    <string name="main_actionbar_navigation_radio">RADIO</string>
    <string name="main_actionbar_navigation_specials">SPECIALS</string>
    <string name="main_actionbar_navigation_profile">PROFILE</string>
    <string name="main_actionbar_navigation_videos">VIDEOS</string>
    <string name="main_actionbar_settings_category_quick_links">QUICK LINKS</string>
    <string name="main_actionbar_settings_category_my_play">MY PLAY</string>
    <string name="main_actionbar_settings_category_more">MORE</string>
    <string name="main_actionbar_settings_category_collapsed">+</string>
    <string name="main_actionbar_settings_category_expanded">-</string>
    <string name="main_actionbar_settings_menu_item_specials">Specials</string>
    <string name="main_actionbar_settings_menu_item_app_tour">App Tour</string>
    <string name="main_actionbar_settings_menu_item_music">Music</string>
    <string name="main_actionbar_settings_menu_item_videos">Videos</string>
    <string name="main_actionbar_settings_menu_item_live_radio">Live Radio</string>
    <string name="main_actionbar_settings_menu_item_discover">Discover</string>
    <string name="main_actionbar_settings_menu_item_my_stream">My Stream</string>
    <string name="main_actionbar_settings_menu_item_my_profile">My Profile</string>
    <string name="main_actionbar_settings_menu_item_my_collections">My Collection</string>
    <string name="main_actionbar_settings_menu_item_my_favorites">My Favorites</string>
    <string name="main_actionbar_settings_menu_item_my_playlists">My Playlists</string>
    <string name="main_actionbar_settings_menu_item_my_discoveries">My Discoveries</string>
    <string name="main_actionbar_settings_menu_item_my_preferences">My Preferences</string>
    <string name="main_actionbar_settings_menu_item_settings_and_accounts">Settings</string>
    <string name="main_actionbar_settings_menu_item_rewards">Rewards</string>
    <string name="main_actionbar_settings_menu_item_invite_friends">Invite Friends</string>
    <string name="main_actionbar_settings_menu_item_rate_this_app">Rate our app</string>
    <string name="main_actionbar_settings_menu_item_give_feedback">Your Feedback</string>
    <string name="main_actionbar_settings_menu_item_help_faq">Help/ FAQ</string>
    <string name="main_actionbar_settings_menu_item_about">About</string>
    <string name="player_error_no_connectivity">No Internet connection. Please retry.</string>
    <string name="player_error_server_issue">Problem with our Server. Please retry.</string>
    <string name="player_loop_mode_on">Loop mode is ON</string>
    <string name="player_loop_mode_off">Loop mode is OFF</string>
    <string name="player_shuffle_mode_on">Shuffle mode is ON</string>
    <string name="player_shuffle_mode_off">Shuffle mode is OFF</string>
    <string name="player_loop_mode_replay_song">Loop mode is REPLAY SONG</string>
    <string name="main_player_bar_progress_bar_scale_text_current">00:00 / </string>
    <string name="main_player_bar_progress_bar_scale_text_length">00:00</string>
    <string name="main_player_bar_message_song_added_to_queue">Song added to queue</string>
    <string name="main_player_bar_message_songs_added_to_queue">Song(s) added to queue</string>
    <string name="main_player_bar_message_song_already_in_queue">Song already in queue</string>
    <string name="main_player_bar_text_not_playing">No Current Songs</string>
    <string name="main_player_bar_button_load">LOAD</string>
    <string name="main_player_content_action_button_download">DOWNLOAD</string>
    <string name="main_player_content_action_button_share">SHARE</string>
    <string name="main_player_content_action_button_playlist">+ PLAYLIST</string>
    <string name="main_player_content_action_button_info">INFO</string>
    <string name="main_player_content_action_button_trivia">TRIVIA</string>
    <string name="main_player_content_action_button_similar">SIMILAR</string>
    <string name="main_player_content_action_button_video">VIDEO</string>
    <string name="main_player_content_action_button_lyrics">LYRICS</string>
    <string name="main_player_content_action_button_info_video">INFO</string>
    <string name="main_player_content_action_button_related">RELATED</string>
    <string name="player_queue_title">Player Queue (%1$s)</string>
    <string name="player_queue_options_save_as_playlist">SAVE AS PLAYLIST</string>
    <string name="player_queue_options_clear_queue">CLEAR QUEUE</string>
    <string name="player_queue_options_load_playlist">LOAD PLAYLIST</string>
    <string name="player_queue_options_load_favorites">LOAD FAVORITES</string>
    <string name="player_queue_options_exit_queue">EXIT QUEUE</string>
    <string name="player_queue_message_confirm_clear_all">Are you sure you want to reset the Songs Queue?</string>
    <string name="player_queue_message_confirm_clear_all_ok">Clear all</string>
    <string name="player_queue_message_confirm_clear_all_cancel">Cancel</string>
    <string name="player_queue_options_button_play_all">PLAY ALL</string>
    <string name="player_load_menu_top_ten">TOP 10</string>
    <string name="player_load_menu_radio">RADIO</string>
    <string name="player_load_menu_my_playlist">MY PLAYLIST</string>
    <string name="player_load_menu_my_favorites">MY FAVORITES</string>
    <string name="player_load_menu_my_playlist_dialog_title_load">LOAD PLAYLIST</string>
    <string name="player_load_menu_my_playlist_dialog_title_add">ADD TO PLAYLIST</string>
    <string name="upgrade_mobile_number_required_music">Your mobile no. is required for downloading music or upgrading to a premium account.</string>
    <string name="upgrade_verification_sms">A verification SMS will be sent to this number.</string>
    <string name="upgrade_mobile_hint">Mobile No.</string>
    <string name="upgrade_country_code">+91</string>
    <string name="upgrade_mobile_required_privacy_title">We respect your privacy</string>
    <string name="upgrade_mobile_required_privacy_text1">Your number  would be private &amp; would not be spammed with messages.</string>
    <string name="upgrade_mobile_required_privacy_text2">You would not receive unsolicited calls from anyone.</string>
    <string name="upgrade_mobile_verification_sms_text1">Verification SMS is sent to your mobile number.</string>
    <string name="upgrade_mobile_verification_sms_text2">If you are in DND, please SMS HPIN to 54646 to receive SMS.</string>
    <string name="upgrade_mobile_verification_sms_resend_sms">RESEND SMS</string>
    <string name="upgrade_mobile_verification_sms_enter_password_text">Enter password here to verify mobile number:</string>
   	<string name="sleep_mode_dialog_title">SLEEP MODE</string>
   	<string name="sleep_mode_15_mins">15 mins</string>
   	<string name="sleep_mode_30_mins">30 mins</string>
   	<string name="sleep_mode_45_mins">45 mins</string>
   	<string name="sleep_mode_60_mins">60 mins</string>
   	<string name="start_timer_button_text">Start</string>
   	<string name="mins_to_sleep">%1$s</string>
</resources>