<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="@dimen/main_actionbar_settings"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_settings_expandablelistview"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <Button 
            android:id="@+id/load_top_ten"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_load_menu_row_height"
            android:background="@color/fragment_load_menu_bg"
            android:text="@string/player_load_menu_top_ten"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"/>
        
        <View 
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/search_fragment_categories_seperator_background"/>
        
        <Button 
            android:id="@+id/load_radio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_load_menu_row_height"
            android:background="@color/fragment_load_menu_bg"
            android:text="@string/player_load_menu_radio"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"/>       
        
         <View 
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/search_fragment_categories_seperator_background"/>
         
        <Button 
            android:id="@+id/load_my_playlist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_load_menu_row_height"
            android:background="@color/fragment_load_menu_bg"
            android:text="@string/player_load_menu_my_playlist"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"/>
        
         <View 
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/search_fragment_categories_seperator_background"/>
         
        <Button 
            android:id="@+id/load_my_favorites"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_load_menu_row_height"
            android:background="@color/fragment_load_menu_bg"
            android:text="@string/player_load_menu_my_favorites"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"/>
        
    </LinearLayout>

</RelativeLayout>